# computer-visualization

./: .gitignore  Cargo.toml  LICENSE  README.md  create_hardware_structure.sh  create_visualization_structure.sh  demo.rs
computer/: lib.rs  main.rs  mod.rs
computer/Server/: mod.rs
computer/common/: mod.rs
computer/laptop/: mod.rs
computer/laptop/general/: mod.rs
computer/laptop/personal/: mod.rs
computer/laptop/personal/visualization/: mod.rs
computer/laptop/specific/: main.rs  mod.rs
computer/src/: mod.rs
computer/src/Embedded/Transportation/: mod.rs
computer/src/GeneralPurpose/EnterpriseComputing/: mod.rs
computer/src/GeneralPurpose/PersonalComputing/: mod.rs
computer/src/common/: mod.rs  thoughts.md
computer/src/common/config/: logging.rs  mod.rs  power_profiles.rs  telemetry.rs
computer/src/common/hardware/: connectivity.rs  memory.rs  mod.rs  processor.rs  storage.rs
computer/src/common/interfaces/: io.rs  mod.rs  network.rs  peripheral.rs
computer/src/common/lifecycle/: boot.rs  mod.rs  shutdown.rs  suspend.rs  update.rs
computer/src/common/security/: authentication.rs  authorization.rs  encryption.rs  intrusion.rs  mod.rs
computer/src/common/testing/: fixtures.rs  helpers.rs  mocks.rs  mod.rs  test_utils.rs
computer/src/common/traits/: bootable.rs  (+5 more)
computer/src/hardware/: mod.rs
computer/src/laptop/: thoughts.md
computer/visualization/: mod.rs
computer/visualization/Desktop/: mod.rs
computer/visualization/Tablet/: mod.rs
computer/visualization/laptop/: mod.rs
computer/visualization/software/: screen_view.rs
(+337 files in other folders)
